Edit linux.yml commit

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,25 +1,24 @@
 name: HW2 Part C-1 workflow
 
 on:
-        push:
-                paths:
-                        - 'linux'
+    push:
+        paths: [ linux ]
 
 jobs:
-        build:
-                runs-on: ubuntu-20.04
+    build:
+        runs-on: ubuntu-20.04
 
-                steps:
-                        - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-                        - name: Install gcc
-                          run: sudo apt-get install gcc-8
+            - name: Install gcc
+              run: sudo apt-get install gcc-8
 
-                        - name: Download linux repository
-                          run: wget https://github.com/iamrosy20/linux/archive/$(git rev-parse HEAD:linux).zip
+            - name: Download linux repository
+              run: wget https://github.com/iamrosy20/linux/archive/$(git rev-parse HEAD:linux).zip
 
-                        - name: Unzip linux repository
-                          run: unzip $(git rev-parse HEAD:linux).zip
+            - name: Unzip linux repository
+              run: unzip $(git rev-parse HEAD:linux).zip
 
-                        - name: Build unzipped source code
-                          run: ./build-linux.sh linux-$(git rev-parse HEAD:linux) tinyconfig
+            - name: Build unzipped source code
+              run: ./build-linux.sh linux-$(git rev-parse HEAD:linux) tinyconfig
