--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -4,8 +4,8 @@ on:
     push:
         branches: [ main, csi2115-f21 ]
         paths: [ linux ]
-        pull_request:
-            branches: [ main ]
+    pull_request:
+        branches: [ main ]
 
 jobs:
     build:
@@ -13,7 +13,7 @@ jobs:
 
         steps:
             - name: Checkout
-            - uses: actions/checkout@v2
+              uses: actions/checkout@v2
 
             - name: Install
               run: ./install-deps.sh
