--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,13 @@ name: HW2 Part C-2 workflow
 on:
     push:
         branches: [ main ]
-        paths: [ test/** ]
+        paths:
+          - 'test/**'
 
     pull_request:
         branches: [ main ]
+
+    workflow_dispatch:
 
 jobs:
     build:
